resyncing git and my laptop
